feat(apiv2): read courses authorized for integrations
